styles/Hero.module.css
.heroContainer {
  min-height: 380px;
  width: 100%;
  display: grid;
  place-content: center;
  text-align: center;
  position: relative;
  overflow: hidden;
  max-width: 1370px;
  margin: 0 auto;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.heroContent {
  max-width: 380px;
  margin: 0 auto;
  position: relative;
  z-index: 100;
  padding-inline: 1rem;
}

.heroText {
  /* padding-top: 2rem; */
  color: #6e6868;
  font-size: 1.2rem;
  font-family: 'Raleway', sans-serif;
}

.heroText span {
  background-color: white;
  padding-inline: 0.7rem;
  font-size: x-large;
  font-family: var(--font-raleway), sans-serif;
  font-weight: 500;
}

.heroVideoContainer {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 80;
}

.heroBackdrop {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  z-index: 90;
  background-color: #e3e3e375;
  height: 100%;
  width: 100%;
  background: linear-gradient(
    to bottom,
    rgba(251, 251, 251, 0),
    rgba(0, 0, 0, 0.594)
  );
}

.heroVideo {
  width: 150%;
  height: 150%;
}

@media screen and (max-width: 670px) {
  .heroVideo {
    width: 200%;
    height: 150%;
  }
}

